--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,31 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# elderlyCare
 
 trigger:
-- main
+- elderlyCare-Sandbox-branch
 
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages: 
+  - stage: 'Junit'
+    displayName: 'Junit stage'
+    jobs:
+    - job: 'JunitTest'
+      displayName: 'Running Unit Test'
+      steps:
+      - script: echo 'Running demo app unit test'
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'pom.xml'
+          goals: 'test'
+          publishJUnitResults: true
+          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          codeCoverageToolOption: 'JaCoCo'
+          javaHomeOption: 'JDKVersion'
+          mavenVersionOption: 'Default'
+          mavenAuthenticateFeed: false
+          effectivePomSkip: false
+          sonarQubeRunAnalysis: false
+          pmdRunAnalysis: true
+          findBugsRunAnalysis: true
+   
